1. enhance all feature; 2. fix bug; 3. add aio server; 4. update dependence